<resources>
    <string name="app_name">Test_1</string>
    <string name="login">Login</string>
    <string name="single">Single</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="welcome_to_hotel">Welcome To Hotel</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>