<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".view.FirstFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="390dp"
        android:id="@+id/animation_view"
        app:lottie_rawRes="@raw/myanimation"
        app:layout_constraintBottom_toBottomOf="@id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_bg"

        android:ems="15"
        android:text="@string/welcome_to_hotel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="200dp"
        android:background="@color/text_bg"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namein"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="21sp"
            android:hint="@string/name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="50dp"
        android:background="@color/text_bg"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="21sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="50dp"
        android:background="@color/text_bg"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/password"
            android:textSize="21sp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/toggle1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="340dp"
        app:layout_constraintBottom_toBottomOf="@id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/myradiobutton"
        app:lottie_loop="false"
        app:lottie_speed="1.75"/>

    <TextView
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="340dp"
        android:text="@string/male"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/Password"
        app:layout_constraintEnd_toStartOf="@id/bu1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/toggle2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="380dp"
        app:layout_constraintBottom_toBottomOf="@id/toggle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/myradiobutton"
        app:lottie_loop="false"
        app:lottie_speed="1.75"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="380dp"
        android:text="@string/single"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/toggle1"
        app:layout_constraintEnd_toStartOf="@id/bu1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:backgroundTint="@color/button_bg"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@id/Password"
        app:layout_constraintEnd_toEndOf="@id/bu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:backgroundTint="@color/button_bg"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/bu1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>